[gd_scene load_steps=31 format=3 uid="uid://dq7y1j0g01wqk"]

[ext_resource type="Script" uid="uid://cxhbl501xx654" path="res://dot_and_boxes.gd" id="1_yowkn"]
[ext_resource type="Texture2D" uid="uid://dbmafr50kypao" path="res://white_bg.png" id="2_clgpa"]
[ext_resource type="Texture2D" uid="uid://vih0cdioiw47" path="res://tactic-assets/border.png" id="2_rld3d"]
[ext_resource type="Texture2D" uid="uid://dfb8h7uyoi0p5" path="res://tactic-assets/skeleton_frames.png" id="3_pj8ac"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rld3d"]
atlas = ExtResource("3_pj8ac")
region = Rect2(0, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_6matu"]
atlas = ExtResource("3_pj8ac")
region = Rect2(500, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_17evn"]
atlas = ExtResource("3_pj8ac")
region = Rect2(1000, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi27q"]
atlas = ExtResource("3_pj8ac")
region = Rect2(1500, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_2khtf"]
atlas = ExtResource("3_pj8ac")
region = Rect2(2000, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb484"]
atlas = ExtResource("3_pj8ac")
region = Rect2(2500, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7itu"]
atlas = ExtResource("3_pj8ac")
region = Rect2(3000, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_yknub"]
atlas = ExtResource("3_pj8ac")
region = Rect2(3500, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_aimi1"]
atlas = ExtResource("3_pj8ac")
region = Rect2(4000, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2ap6"]
atlas = ExtResource("3_pj8ac")
region = Rect2(4500, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgc76"]
atlas = ExtResource("3_pj8ac")
region = Rect2(5000, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi8qh"]
atlas = ExtResource("3_pj8ac")
region = Rect2(5500, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5l23"]
atlas = ExtResource("3_pj8ac")
region = Rect2(6000, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6kl7"]
atlas = ExtResource("3_pj8ac")
region = Rect2(6500, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqjlp"]
atlas = ExtResource("3_pj8ac")
region = Rect2(7000, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_fscd2"]
atlas = ExtResource("3_pj8ac")
region = Rect2(7500, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_1irgc"]
atlas = ExtResource("3_pj8ac")
region = Rect2(8000, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb1si"]
atlas = ExtResource("3_pj8ac")
region = Rect2(8500, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7x3y"]
atlas = ExtResource("3_pj8ac")
region = Rect2(9000, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmo81"]
atlas = ExtResource("3_pj8ac")
region = Rect2(9500, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_si6wn"]
atlas = ExtResource("3_pj8ac")
region = Rect2(10000, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6346"]
atlas = ExtResource("3_pj8ac")
region = Rect2(10500, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rsdc"]
atlas = ExtResource("3_pj8ac")
region = Rect2(11000, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro8gg"]
atlas = ExtResource("3_pj8ac")
region = Rect2(11500, 0, 500, 714)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mjh8"]
atlas = ExtResource("3_pj8ac")
region = Rect2(12000, 0, 500, 714)

[sub_resource type="SpriteFrames" id="SpriteFrames_6c37r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rld3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6matu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17evn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi27q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2khtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7itu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yknub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aimi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2ap6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgc76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi8qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5l23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6kl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqjlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fscd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1irgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb1si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7x3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmo81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si6wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6346")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rsdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro8gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mjh8")
}],
"loop": true,
"name": &"default",
"speed": 17.0
}]

[node name="Game" type="Node2D"]
script = ExtResource("1_yowkn")

[node name="Grid" type="Node2D" parent="."]
z_index = 1
position = Vector2(-100, 0)

[node name="Boxes" type="Node2D" parent="Grid"]
z_index = 3

[node name="Sprite2D" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D2" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D3" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D4" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D5" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D6" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D7" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D8" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D9" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D10" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D11" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D12" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D13" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D14" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D15" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D16" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D17" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D18" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D19" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D20" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D21" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D22" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D23" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D24" type="Sprite2D" parent="Grid/Boxes"]

[node name="Sprite2D25" type="Sprite2D" parent="Grid/Boxes"]

[node name="Dots" type="Node2D" parent="Grid"]

[node name="Sprite2D" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D2" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D3" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D4" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D5" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D6" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D7" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D8" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D9" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D10" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D11" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D12" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D13" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D14" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D15" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D16" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D17" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D18" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D19" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D20" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D21" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D22" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D23" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D24" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D25" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D26" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D27" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D28" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D29" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D30" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D31" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D32" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D33" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D34" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D35" type="Sprite2D" parent="Grid/Dots"]

[node name="Sprite2D36" type="Sprite2D" parent="Grid/Dots"]

[node name="Lines" type="Node2D" parent="Grid"]
z_index = 1

[node name="H_lines" type="Node2D" parent="Grid/Lines"]

[node name="Sprite2D" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D2" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D3" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D4" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D5" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D6" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D7" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D8" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D9" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D10" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D11" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D12" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D13" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D14" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D15" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D16" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D17" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D18" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D19" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D20" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D21" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D22" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D23" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D24" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D25" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D26" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D27" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D28" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D29" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="Sprite2D30" type="Sprite2D" parent="Grid/Lines/H_lines"]

[node name="V_lines" type="Node2D" parent="Grid/Lines"]

[node name="Sprite2D" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D2" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D3" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D4" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D5" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D6" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D7" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D8" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D9" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D10" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D11" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D12" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D13" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D14" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D15" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D16" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D17" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D18" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D19" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D20" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D21" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D22" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D23" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D24" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D25" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D26" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D27" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D28" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D29" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D30" type="Sprite2D" parent="Grid/Lines/V_lines"]

[node name="Sprite2D" type="Sprite2D" parent="Grid"]
texture_filter = 1
position = Vector2(524, 481.99997)
scale = Vector2(7.836735, 7.7538466)
texture = ExtResource("2_rld3d")
metadata/_edit_lock_ = true

[node name="UI" type="Node2D" parent="."]

[node name="score board" type="Node2D" parent="UI"]

[node name="Sprite2D" type="Sprite2D" parent="UI/score board"]

[node name="Sprite2D2" type="Sprite2D" parent="UI/score board"]

[node name="Sprite2D" type="Sprite2D" parent="UI"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="ColorRect" type="TextureRect" parent="CanvasLayer"]
z_as_relative = false
offset_left = -534.0
offset_top = -149.0
offset_right = -339.67838
offset_bottom = 50.819687
scale = Vector2(12.921875, 6.5859375)
texture = ExtResource("2_clgpa")
metadata/_edit_lock_ = true

[node name="HTTPRequest1" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="HTTPRequest3" type="HTTPRequest" parent="."]

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(712, 587)
sprite_frames = SubResource("SpriteFrames_6c37r")
autoplay = "default"
frame_progress = 0.42248562
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(424, 486)

[node name="turn indicator" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="turn indicator"]
texture_filter = 1
position = Vector2(369.00003, 730)
scale = Vector2(9.563, 9.5)

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
